Fix: add extra padding for toggle buttons

--- a/src/styles/isomer-cms/elements/form.scss
+++ b/src/styles/isomer-cms/elements/form.scss
@@ -47,6 +47,21 @@ p {
   }
 }
 
+.formToggle{
+  @extend .formHorizontal;
+  padding-bottom:20px;
+
+  .formToggleLabel{
+    @extend .formLabel;
+    width: 25%;
+    margin: 1px;
+  }
+
+  .formToggleInput{
+    width: 75%;
+  }
+}
+
 .formDropdown{
   @extend .formHorizontal;
 
